--- a/downstream/modules/platform/proc-settings-gw-password-security.adoc
+++ b/downstream/modules/platform/proc-settings-gw-password-security.adoc
@@ -12,10 +12,10 @@ From the *Platform gateway settings* page, you can configure a password security
 . To configure the options, click btn:[Edit platform gateway settings].
 . You can configure the following *Password Security* options:
 +
-* *Password min upper*: How many uppercase characters need to be in a local password.
-* *Password min length*: The minimum length of a local password.
-* *Password min digits*: How many numerical characters need to be in a local password.
-* *Password min special*: How many special characters need to be in a local password.
+* *Password minimum uppercase letters*: How many uppercase characters need to be in a local password.
+* *Password minimum length*: The minimum length of a local password.
+* *Password minimum numerical digits*: How many numerical characters need to be in a local password.
+* *Password minimum special characters*: How many special characters need to be in a local password.
 +
 . Click btn:[Save platform gateway settings] to save the changes or proceed to configure the other platform options available.
 
