--- a/downstream/modules/platform/proc-settings-troubleshooting.adoc
+++ b/downstream/modules/platform/proc-settings-troubleshooting.adoc
@@ -16,4 +16,5 @@ You can use the *Troubleshooting* page to enable or disable certain flags that a
 * *Enable or Disable tmp dir cleanup*: Select this to enable or disable the cleanup of tmp directories generated during execution of a job after job execution completes.
 * *Debug Web Requests*: Select this to enable or disable web request profiling for debugging slow web requests.
 * *Release Receptor Work*: Select this to turn on or off the deletion of job pods after they complete or fail. This can be helpful in debugging why a job failed. 
+* *Keep receptor work on error*: Select this to prevent receptor work from being released when an error is detected.
 . Click btn:[Save] to save your changes.
