--- a/downstream/modules/platform/proc-settings-user-preferences.adoc
+++ b/downstream/modules/platform/proc-settings-user-preferences.adoc
@@ -14,7 +14,7 @@ User preferences are stored locally in your browser. This means that they are un
 .Procedure
 
 . From the navigation panel, select {MenuSetUserPref}.
-. The *User preferences page* is displayed. 
+. The *User Preferences page* is displayed. 
 . Click btn:[Edit]. 
 . You can configure the following options:
 +
@@ -24,27 +24,27 @@ This refreshes the data on the page at the selected interval.
 +
 The refresh happens in the background and does not reload the page.
 +
-* *Color Theme*: Select from:
+* *Color theme*: Select from:
 ** Dark theme
 ** Light theme
 ** System default
 +
-* *Table Layout*: Select from:
+* *Table layout*: Select from:
 ** Comfortable
 ** Compact
 +
-* *Form Columns*: Select from:
+* *Form columns*: Select from:
 ** Multiple columns of inputs
 ** Single column of inputs
+//[ddacosta] 9/20/24 Form labels is no longer in the UI
+//* *Form Labels*: Select from:
+//** Labels above inputs
+//** Labels beside inputs
 +
-* *Form Labels*: Select from:
-** Labels above inputs
-** Labels beside inputs
+* *Date format* Select from:
+** Shows dates *Relative* to the current time
+** Shows dates as *Date and time*
 +
-* *Date Format* Select from
-** Shows dates relative to the current time
-** Shows dates as date and time
-+
-* *Preferred Date Format*: Sets the default format for when editing date fields.
+* *Preferred data format*: Sets the default format for when editing and displaying data.
 +
 . Click btn:[Save user preferences].
