--- a/downstream/modules/platform/ref-controller-organization-notifications.adoc
+++ b/downstream/modules/platform/ref-controller-organization-notifications.adoc
@@ -2,7 +2,7 @@
 
 [id="ref-controller-organization-notifications"]
 
-= Work with notifiers
+= Working with notifiers
 
 When {ControllerName} is enabled on the platform, you can review any notifier integrations you have set up and manage their settings within the organization resource. 
 
