--- a/downstream/assemblies/platform/assembly-ag-controller-config.adoc
+++ b/downstream/assemblies/platform/assembly-ag-controller-config.adoc
@@ -10,7 +10,8 @@ To return to the *Settings* page, from the navigation panel select {MenuAEAdminS
 
 //Now a separate option covered by Donna
 //include::platform/proc-controller-authentication.adoc[leveloffset=+1]
-include::platform/proc-controller-configure-subscriptions.adoc[leveloffset=+1]
+//[ddacosta] subscription content moved to access management guide
+//include::platform/proc-controller-configure-subscriptions.adoc[leveloffset=+1]
 include::platform/proc-controller-configure-system.adoc[leveloffset=+1]
 include::platform/proc-controller-configure-jobs.adoc[leveloffset=+1]
 include::platform/ref-controller-logging-settings.adoc[leveloffset=+1]
