--- a/downstream/assemblies/platform/assembly-gw-settings.adoc
+++ b/downstream/assemblies/platform/assembly-gw-settings.adoc
@@ -13,7 +13,7 @@ You can configure Ansible Automation platform from the *Settings* menu using the
 
 [NOTE]
 ====
-The other selections available from the *Settings* menu are specific to automation execution. For more information, refer to the link:https://{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/controller-config[TitleControllerAdminGuide] guide.
+The other selections available from the *Settings* menu are specific to automation execution. For more information, refer to the link:{URLControllerAdminGuide}/index#controller-config[{TitleControllerAdminGuide}] guide.
 ====
 
 include::platform/proc-controller-configure-subscriptions.adoc[leveloffset=+1]
@@ -25,4 +25,3 @@ include::platform/proc-settings-gw-custom-login.adoc[leveloffset=+2]
 include::platform/proc-settings-gw-additional-options.adoc[leveloffset=+2]
 include::platform/proc-settings-user-preferences.adoc[leveloffset=+1]
 include::platform/proc-settings-troubleshooting.adoc[leveloffset=+1]
- 
