AAP-31745 - Reconcile chapter 6 of the Access management guide

--- a/downstream/modules/platform/proc-gw-create-roles.adoc
+++ b/downstream/modules/platform/proc-gw-create-roles.adoc
@@ -15,6 +15,6 @@ include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
 . Click btn:[Create role].
 . Provide a *Name* and optionally include a *Description* for the role.
-. Select a *Content type*.
+. Select a *Content Type*.
 . Select the *Permissions* you want assigned to this role.
 . Click btn:[Create role] to create your new role.
