--- a/downstream/modules/platform/proc-gw-edit-roles.adoc
+++ b/downstream/modules/platform/proc-gw-edit-roles.adoc
@@ -4,12 +4,12 @@
 
 = Editing a role
 
-Built in roles can not be changed, however, you can modify custom roles from the *Roles* list view.
+Built in roles can not be changed, however, you can modify custom roles from the *Roles* list view. The *Editable* column in the *Roles* list view indicates whether a role is _Built-in_ or _Editable_. 
 
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-. Select a tab for the component resource for which you want to create custom roles.
+. Select a tab for the component resource for which you want to modify a custom roles.
 +
 include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
