--- a/downstream/modules/platform/proc-gw-roles.adoc
+++ b/downstream/modules/platform/proc-gw-roles.adoc
@@ -13,5 +13,5 @@ You can display the roles assigned for component resources from the menu:Access 
 +
 include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
-. From the table header, you can sort the list of roles by using the arrows for *Role*, *Description*, *Created* and *Editable* or by making sort selections in the *Sort* list.
+. From the table header, you can sort the list of roles by using the arrows for *Name*, *Description*, *Created* and *Editable* or by making sort selections in the *Sort* list.
 . You can filter the list of roles by selecting *Name* or *Editable* from the filter list and clicking the arrow.
