--- a/downstream/snippets/snip-gw-roles-note-multiple-components.adoc
+++ b/downstream/snippets/snip-gw-roles-note-multiple-components.adoc
@@ -1,4 +1,4 @@
 [NOTE]
 ====
-If you have multiple {PlatformNameShort} components installed, you will see selections for the roles associated with each component in the *Roles* menu bar. For example, Automation Execution for {ControllerName} roles, Automation Content for {HubName} and Automation Decisions for {EDAName} roles.
+If you have multiple {PlatformNameShort} components installed, you will see selections for the roles associated with each component in the *Roles* menu bar. For example, Automation Execution for {ControllerName} roles, Automation Decisions for {EDAName} roles and Automation Content for {HubName} roles.
 ====
