--- a/downstream/modules/platform/proc-gw-delete-roles.adoc
+++ b/downstream/modules/platform/proc-gw-delete-roles.adoc
@@ -14,4 +14,4 @@ Built in roles can not be deleted, however, you can delete custom roles from the
 include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
 . Click the *More Actions* icon *{MoreActionsIcon}* next to the role you want and select *Delete role*.
-. To delete roles in bulk, select the roles you want to delete from the *Roles* list view, click the *More Actions* icon *{MoreActionsIcon}*, and select *Delete selected roles*.
+. To delete roles in bulk, select the roles you want to delete from the *Roles* list view, click the *More Actions* icon *{MoreActionsIcon}*, and select *Delete roles*.
