AAP-31742 - Reconcile chapter 7 of Access management guide (#2022)
* AAP-31742 - Reconcile chapter 7 of Access management guide

* AAP-31742 - adding peer review changes

--- a/downstream/modules/platform/proc-settings-gw-security-options.adoc
+++ b/downstream/modules/platform/proc-settings-gw-security-options.adoc
@@ -13,7 +13,7 @@ From the *Platform gateway settings* page, you can configure platform security s
 . You can configure the following *Security* settings:
 +
 * *Allow admin to set insecure*: Whether a superuser account can save an insecure password when editing any local user account.
-* *Platform gateway basic auth enabled*: Enable basic authentication to the platform gateway API.
+* *Gateway basic auth enabled*: Enable basic authentication to the platform gateway API.
 +
 Turning this off prevents all basic authentication (local users), so customers need to make sure they have their alternative authentication mechanisms correctly configured before doing so. 
 +
@@ -21,15 +21,15 @@ Turning it off with only local authentication configured also prevents all acces
 +
 *Social auth username in full email*: Enabling this setting alerts social authentication to use the full email as username instead of the full name.
 +
-*Platform gateway token name*: The header name to push from the proxy to the backend service. 
+*Gateway token name*: The header name to push from the proxy to the backend service. 
 +
 [WARNING]
 ==== 
 If this name is changed, backends must be updated to compensate.
 ====
 +
-* *Platform gateway access token expiration*: How long the access tokens are valid for.
-* *JWT private key*: The private key used to encrypt the JWT tokens sent to back end services. 
+* *Gateway access token expiration*: How long the access tokens are valid for.
+* *Jwt private key*: The private key used to encrypt the JWT tokens sent to backend services. 
 +
 This should be a private RSA key and one should be generated automatically on installation.
 +
@@ -38,7 +38,7 @@ This should be a private RSA key and one should be generated automatically on in
 Use caution when rotating the key as it will cause current sessions to fail until their JWT keys are reset.
 ====
 +
-* (Read only) *JWT public key*: The private key used to encrypt the JWT tokens sent to back end services. 
+* (Read only) *Jwt public key*: The private key used to encrypt the JWT tokens sent to backend services. 
 +
 This should be a private RSA key and one should be generated automatically on installation. 
 +
