AAP-31746 Reconciling Organization content

--- a/downstream/modules/platform/proc-controller-add-organization-user.adoc
+++ b/downstream/modules/platform/proc-controller-add-organization-user.adoc
@@ -16,14 +16,15 @@ To add roles for a user, the role must already exist. See xref:proc-gw-create-ro
 include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
 . Click btn:[Next] to review the roles settings.
-. Click btn:[Finish] to apply the roles to the selected users, and to add them as members. The *Add users* dialog displays the updated roles assigned for each user.
+. Click btn:[Finish] to apply the roles to the selected users, and to add them as members. The *Add roles* dialog displays the updated roles assigned for each user.
 +
 [NOTE]
 ====
 A user with associated roles retains them if they are reassigned to another organization.
 ====
 +
-. To remove a particular user from the organization, select *Remove user* from the {MoreActionsIcon} list next to the user or team. This launches a confirmation dialog, asking you to confirm the removal.
+. To remove a particular user from the organization, select *Remove user* from the {MoreActionsIcon} list next to the user. This launches a confirmation dialog, asking you to confirm the removal.
+. To manage roles for users in an organization, click the *{SettingsIcon}* icon next to the user and select *Manage roles*. 
 
 
 
