--- a/downstream/modules/platform/proc-controller-create-organization.adoc
+++ b/downstream/modules/platform/proc-controller-create-organization.adoc
@@ -5,7 +5,9 @@
 = Creating an organization
 
 {PlatformNameShort} automatically creates a default organization. If you have a self-support level license, you have only the default organization available and cannot delete it. 
-//You can use the default organization as it is initially set up and edit it later.
+
+//[ddacosta] Editing has been disabled but there are ongoing conversations about adding it back later: 
+// You can use the default organization as it is initially set up and edit it later.
 
 .Procedure
 . From the navigation panel, select {MenuAMOrganizations}.
@@ -14,18 +16,20 @@
 +
 [NOTE]
 ====
-If {ControllerName} is enabled on the platform, continue with Step 4. Otherwise, proceed to Step 7.
+If {ControllerName} is enabled on the platform, continue with Step 4. Otherwise, proceed to Step 6.
 ====
 +
 . Select the name of the *Execution environment* or search for one that exists that members of this team can run automation.
 . Enter the name of the *Instance Groups* on which to run this organization.  
 . Optional: Enter the *Galaxy credentials* or search from a list of existing ones.
-. Select the *Max hosts* for this organization. 
-The default is 0. When this value is 0, it signifies no limit. 
-If you try to add a host to an organization that has reached or exceeded its cap on hosts, an error message displays:
-`You have already reached the maximum number of 1 hosts allowed for your organization. Contact your System Administrator for assistance.`
+. Select the *Max hosts* for this organization. The default is 0. When this value is 0, it signifies no limit. If you try to add a host to an organization that has reached or exceeded its cap on hosts, an error message displays:
++
+----
+You have already reached the maximum number of 1 hosts allowed for your organization. Contact your System Administrator for assistance.
+----
++
 . Click btn:[Next]. 
-. If you include more than one instance group, you can manage the instance group order by dragging and dropping the instance group up or down in the list. 
+. If you selected more than 1 instance group, you can manage the order by dragging and dropping the instance group up or down in the list and clicking btn:[Confirm]. 
 +
 [NOTE]
 ====
