--- a/downstream/modules/platform/proc-controller-review-organizations.adoc
+++ b/downstream/modules/platform/proc-controller-review-organizations.adoc
@@ -4,12 +4,12 @@
 
 = Organizations list view
 
-The Organizations page displays the existing organizations for your installation. From here, you can search for a specific organization, filter the list of organizations, or change the sort order for the list.
+The *Organizations* page displays the existing organizations for your installation. From here, you can search for a specific organization, filter the list of organizations, or change the sort order for the list.
 
 .Procedure
 
 . From the navigation panel, select menu:{MenuAMOrganizations}.
 . In the Search bar, enter an appropriate keyword for the organization you want to search for and click the arrow icon.
 . From the menu bar, you can sort the list of organizations by using the arrows for *Name* to toggle your sorting preference.
-. You can also sort the list by selecting *Name*, *Created* or *Modified* from the *Sort* list.
-. You can view organization details by clicking an organization *Name* on the Organizations page.  
+. You can also sort the list by selecting *Name*, *Created* or *Last modified* from the *Sort* list.
+. You can view organization details by clicking an organization *Name* on the *Organizations* page.  
