--- a/downstream/modules/platform/proc-gw-add-team-organization.adoc
+++ b/downstream/modules/platform/proc-gw-add-team-organization.adoc
@@ -25,3 +25,5 @@ include::snippets/snip-gw-roles-note-multiple-components.adoc
 ====
 A team with associated roles retains them if they are reassigned to another organization.
 ====
++
+. To manage roles for teams in an organization, click the *{SettingsIcon}* icon next to the user and select *Manage roles*. 
