--- a/downstream/modules/platform/proc-gw-delete-organization.adoc
+++ b/downstream/modules/platform/proc-gw-delete-organization.adoc
@@ -4,19 +4,19 @@
 
 = Deleting an organization
 
-Before you can delete an organization, you must be an Organization administrator or System administrator. When you delete an organization, the organization, team, users and work items are permanently removed from {PlatformNameShort}.
+Before you can delete an organization, you must be an Organization administrator or System administrator. When you delete an organization, the organization, team, users and resources are permanently removed from {PlatformNameShort}.
 
 [NOTE]
 ====
-When you attempt to delete items that are used by other work items, a message is displayed warning you that the deletion might impact other resources and prompts you to confirm the deletion. Some screens contain items that are invalid or have been deleted previously, and will fail to run.
+When you attempt to delete items that are used by other resources, a message is displayed warning you that the deletion might impact other resources and prompts you to confirm the deletion. Some screens contain items that are invalid or have been deleted previously, and will fail to run.
 ====
 
 .Procedure
 . From the navigation panel, select {MenuAMOrganizations}.
-. Click the More Actions icon next to the organization you want removed and select *Delete organization*.
-. Select the checkbox and click *Delete organizations* to proceed with the deletion. Otherwise, click btn:[Cancel].
+. Click the *{MoreActionsIcon}* icon next to the organization you want removed and select *Delete organization*.
+. Select the confirmation checkbox and click btn:[Delete organizations] to proceed with the deletion. Otherwise, click btn:[Cancel].
 +
 [NOTE]
 ====
-You can delete multiple organizations by selecting the checkbox next to each organization you want to remove, and clicking Delete selected organizations from the more actions list on the menu bar.
+You can delete multiple organizations by selecting the checkbox next to each organization you want to remove, and selecting *Delete selected organizations* from the {MoreActionsIcon} list on the menu bar.
 ====
