--- a/downstream/modules/platform/proc-gw-edit-roles.adoc
+++ b/downstream/modules/platform/proc-gw-edit-roles.adoc
@@ -9,7 +9,7 @@ Built in roles can not be changed, however, you can modify custom roles from the
 .Procedure
 
 . From the navigation panel, select {MenuAMRoles}.
-. Select a tab for the component resource for which you want to modify a custom roles.
+. Select a tab for the component resource for which you want to modify a custom role.
 +
 include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 +
