--- a/downstream/assemblies/platform/assembly-controller-organizations.adoc
+++ b/downstream/assemblies/platform/assembly-controller-organizations.adoc
@@ -11,12 +11,12 @@ ifdef::context[:parent-context: {context}]
 An organization is a logical collection of users, teams, and resources. It is the highest level object in the {PlatformNameShort} object hierarchy. After you have created an organization, {PlatformNameShort} displays the organization details. You can then manage access and execution environments for the organization.
 {PlatformNameShort} automatically creates a default organization and the system administrator is automatically assigned to this organization. If you have a Self-support level license, you have only the default organization available and must not delete it.
 
-[NOTE]
-====
-Only Enterprise or Premium licenses can add new organizations.
-====
-
-Enterprise and Premium license users who want to add a new organization should refer to the xref:proc-controller-create-organization[Creating an organization].
+// [ddacosta] Removed this statement because I think it was relevant when this content was upstream but in the downstream docs, it’s implied that you have a license.
+//[NOTE]
+//====
+//Only Enterprise or Premium licenses can add new organizations.
+//====
+//Enterprise and Premium license users who want to add a new organization should refer to the xref:proc-controller-create-organization[Creating an organization].
 
 include::platform/proc-controller-review-organizations.adoc[leveloffset=+1]
 
