--- a/downstream/modules/platform/proc-gw-add-admin-organization.adoc
+++ b/downstream/modules/platform/proc-gw-add-admin-organization.adoc
@@ -14,7 +14,7 @@ To add an administrator to an organization, the user must already exist.
 . Click the *Administrators* tab.
 . Click btn:[Add administrators].
 . Select the users from the list by clicking the checkbox next to the name to assign the administrator role to them for this organization.
-. Click btn:[Save].
+. Click btn:[Add administrators].
 . To remove a particular administrator from the organization, select *Remove administrator* from the {MoreActionsIcon} list next to the administrator name. This launches a confirmation dialog, asking you to confirm the removal.
 +
 [NOTE]
