AAP-31746 - Reconcile Team content

--- a/downstream/modules/platform/proc-controller-user-permissions.adoc
+++ b/downstream/modules/platform/proc-controller-user-permissions.adoc
@@ -17,6 +17,6 @@ include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 . Select a *Resource type* and click btn:[Next]. 
 . Select the resources to receive the new roles and click btn:[Next].
 . Select the roles to apply to the resources and click btn:[Next].
-. Review the settings and click btn:[Save].
+. Review the settings and click btn:[Finish].
 + 
-A progress bar displays indicating whether the role assignments were successfully applied.
+The Add roles dialog displays indicating whether the role assignments were successfully applied, click btn[Close] to close the dialog.
