--- a/downstream/modules/platform/proc-gw-team-add-user.adoc
+++ b/downstream/modules/platform/proc-gw-team-add-user.adoc
@@ -3,7 +3,7 @@
 [id="proc-gw-team-add-user"]
 
 = Adding users to a team
-To add a user to a team, the user must already have been created. For more information, see (TBD - Create a user). Adding a user to a team adds them as a member only. Use the *Roles* tab to assign a role for the user on different resources to the selected team.
+To add a user to a team, the user must already have been created. For more information, see xref:proc-controller-creating-a-user[Creating a user]. Adding a user to a team adds them as a member only. Use the *Roles* tab to assign a role for different resources to the selected team.
 
 .Procedure
 
@@ -11,4 +11,5 @@ To add a user to a team, the user must already have been created. For more infor
 . Select the team to which you want to add users.
 . Select the *Users* tab and click btn:[Add users].
 . Select one or more users from the list by clicking the checkbox next to the name to add them as members of this team.
-. Click btn:[Save].
+. Click btn:[Add users].
+ 
