--- a/downstream/modules/platform/proc-gw-team-list-view.adoc
+++ b/downstream/modules/platform/proc-gw-team-list-view.adoc
@@ -11,5 +11,5 @@ The Teams page displays the existing teams for your installation. From here, you
 . From the navigation panel, select {MenuAMTeams}.
 . In the *Search* bar, enter an appropriate keyword for the team you want to search for and click the arrow icon.
 . From the menu bar, you can sort the list of teams by using the arrows for  *Name* and *Organization* to toggle your sorting preference.
-. You can view team details by clicking a team *Name* on the Teams page.
-. You can view organization details by clicking the link in the Organization column.
+. You can view team details by clicking a team *Name* on the *Teams* page.
+. You can view organization details by clicking the link in the *Organization* column.
