--- a/downstream/modules/platform/proc-gw-team-remove-user.adoc
+++ b/downstream/modules/platform/proc-gw-team-remove-user.adoc
@@ -11,7 +11,7 @@ You can remove a user from a team from the Team list view.
 . From the navigation panel, select {MenuAMTeams}.
 . Select the team from which you want to remove users.
 . Select the *Users* tab.
-. Click the {MoreActionsIcon} icon next to the user you want to remove as a member of the team and select *Remove user*.
+. Click the *Remove user* icon next to the user you want to remove as a member of the team.
 . You can delete multiple users by selecting the checkbox next to each user you want to remove, and selecting *Remove selected users* from the {MoreActionsIcon} list.
 +
 [NOTE]
