AAP-31746 - reconcile Users content

--- a/downstream/modules/platform/ref-controller-user-roles.adoc
+++ b/downstream/modules/platform/ref-controller-user-roles.adoc
@@ -8,7 +8,7 @@ You can grant access for users to use, read, or write credentials by assigning r
 
 .Procedure
 . From the navigation panel, select {MenuAMUsers}.
-. From the Users list view, click on the user to which you want to add roles.
+. From the *Users* list view, click on the user to which you want to add roles.
 . Select the *Roles* tab to display the set of roles assigned to this user. These provide the ability to read, modify, and administer resources.
 . To add new roles, click btn:[Add roles].
 +
@@ -17,6 +17,6 @@ include::snippets/snip-gw-roles-note-multiple-components.adoc[]
 . Select a Resource type and click btn:[Next]. 
 . Select the resources that will receive new roles and click btn:[Next].
 . Select the roles that will be applied to the resources and click btn:[Next].
-. Review the settings and click btn:[Save].
+. Review the settings and click btn:[Finish].
 +
-A progress bar displays indicating whether the role assignments were successfully applied.
+The Add roles dialog displays indicating whether the role assignments were successfully applied. Click btn:[Close] to close the dialog.
