--- a/downstream/modules/platform/proc-controller-creating-a-user.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-user.adoc
@@ -6,15 +6,15 @@
 
 There are three types of users in {PlatformNameShort}: 
 
-Normal user:: Normal users have read and write access limited to the resources (such as inventory, projects, and job templates) for which that user has been granted the appropriate roles and privileges. Normal users are the default type of user.
+Normal user:: Normal users have read and write access limited to the resources (such as inventory, projects, and job templates) for which that user has been granted the appropriate roles and privileges. Normal users are the default type of user when no other *User type* is specified.
 {PlatformNameShort} Administrator:: An administrator (also known as a Superuser) has full system administration privileges — with full read and write privileges over the entire installation. An administrator is typically responsible for managing all aspects of and delegating responsibilities for day-to-day work to various users.
 {PlatformNameShort} Auditor:: Auditors have read-only capability for all objects within the environment.
 
 .Procedure
 . From the navigation panel, select {MenuAMUsers}. 
 . Click btn:[Create user].
-. Enter the details about your new user in the fields on the *Create* user page. Fields marked with an asterisk (*) are required.
-. Normal users are the default when no User type is specified. To define a user as an administrator or auditor, select a *User type* checkbox.
+. Enter the details about your new user in the fields on the *Create user* page. Fields marked with an asterisk (*) are required.
+. Normal users are the default when no *User type* is specified. To define a user as an administrator or auditor, select a *User type* checkbox.
 +
 [NOTE]
 ====
@@ -31,5 +31,4 @@ When the user is successfully created, the *User* dialog opens. From here, you c
 If the user is not newly-created, the details screen displays the last login activity of that user.
 ====
 
-If you log in as yourself, and view the details of your user profile, you can manage tokens from your user profile by selecting the *Tokens* tab.
-// [ddacosta - Removing until OAuth and Applications content is completed.] For more information, see xref:proc-controller-apps-create-tokens[Adding a token].
+If you log in as yourself, and view the details of your user profile, you can manage tokens from your user profile by selecting the *Tokens* tab For more information, see xref:proc-controller-apps-create-tokens[Adding a token].
