--- a/downstream/modules/platform/proc-gw-users-list-view.adoc
+++ b/downstream/modules/platform/proc-gw-users-list-view.adoc
@@ -4,11 +4,11 @@
 
 = Users list view
 
-The User page displays the existing users for your installation. From here, you can search for a specific user, filter the list of users, or change the sort order for the list.
+The *Users* page displays the existing users for your installation. From here, you can search for a specific user, filter the list of users, or change the sort order for the list.
 
 .Procedure
 
 . From the navigation panel, select {MenuAMUsers}.
 . In the *Search* bar, enter an appropriate keyword for the user you want to search for and click the arrow icon.
-. From the menu bar, you can sort the list of users by using the arrows for  *Username*, *User type*, *First name*, or *Last name* to toggle your sorting preference.
-. You can view user details by selecting a *Username* on the Users page and selecting the *Details* tab.
+. From the menu bar, you can sort the list of users by using the arrows for  *Username*, *Email*, *First name*, *Last name* or *Last login* to toggle your sorting preference.
+. You can view user details by selecting a *Username* from the *Users* list view.
