populating EDA and inventory modules

--- a/downstream/modules/platform/proc-gs-add-ee-to-job-template.adoc
+++ b/downstream/modules/platform/proc-gs-add-ee-to-job-template.adoc
@@ -38,4 +38,4 @@ When you have added an {ExecEnvShort} to a job template, the template will be li
 
 If you have many {ExecEnvShort} that you want to maintain, you can store them in a container registry linked to your {PrivateHubName}. 
 
-For more information, see link:{URLBuilder}/index#populate-container-registry[Populating your private automation hub container registry] from the Creating and consuming execution environments guide.  
+For more information, see link:{URLBuilder}/index#populate-container-registry[Populating your private automation hub container registry] from the {TitleBuilder} guide.  
