--- a/downstream/modules/platform/proc-gs-auto-dev-set-up-decision-env.adoc
+++ b/downstream/modules/platform/proc-gs-auto-dev-set-up-decision-env.adoc
@@ -1,22 +1,20 @@
 [id="proc-gs-auto-dev-set-up-decision-env"]
 
 = Setting up a new decision environment
-// [ddacosta] I don't think there will be an EDA specific dashboard in the gateway. This might need to be changed to reflect the changes for 2.5.
-The following steps describe how to import a decision environment into your {EDAcontroller} Dashboard.
+
+The following steps describe how to import a decision environment into the platform.
 
 .Prerequisites
 
-* You are logged in to the {EDAcontroller} Dashboard as a Content Consumer.
-* You have set up a credential, if necessary.
-For more information, see the [ADD 2.5 LINK][Setting up credentials] section.
+* You have set up any necessary credentials.
+For more information, see the link:{URLEDAUserGuide}/eda-credentials#eda-set-up-credential[Setting up credentials] section of the {TitleEDAUserGuide} guide.
 * You have pushed a decision environment image to an image repository or you chose to use the image `de-supported` provided at link:http://registry.redhat.io/[registry.redhat.io].
 
 .Procedure
 
-. Log in to the {PlatformNameShort} Dashboard.
 . Navigate to {MenuADDecisionEnvironments}.
 . Click btn:[Create decision environment].
-. Insert the following:
+. Enter the following:
 +
 Name:: Insert the name.
 Description:: This field is optional.
