AAP-31746 Reconcile the resource content

--- a/downstream/modules/platform/proc-gw-team-access-resources.adoc
+++ b/downstream/modules/platform/proc-gw-team-access-resources.adoc
@@ -9,7 +9,8 @@ You can grant users access based on their team membership. When you add a user a
 
 . From the navigation panel, select a resource to which you want to provide team access. For example, {MenuAETemplates}.
 . Select the *Team Access* tab.
+. Click btn:[Add roles].
 . Click the checkbox beside the team to assign that team to your chosen type of resource and click btn:[Next].
 . Select the roles you want applied to the team for the chosen resource and click btn:[Next].
-. Review the settings and click btn:[Save]. A progress bar displays indicating whether the role assignments were successfully applied.
-. You can remove resource access for a team by selecting the - icon next to the team. This launches a confirmation dialog, asking you to confirm the removal.
+. Review the settings and click btn:[Finish]. The Add roles dialog displays indicating whether the role assignments were successfully applied.
+. You can remove resource access for a team by selecting the *Remove role* icon next to the team. This launches a confirmation dialog, asking you to confirm the removal.
