--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -317,8 +317,8 @@
 :LinkOperatorInstallation: {URLOperatorInstallation}[{TitleOperatorInstallation}]
 //
 // titles/aap-installation-guide
-:TitleInstallationGuide: Installing on virtual machines
-:URLInstallationGuide: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/installing_on_virtual_machines
+:TitleInstallationGuide: RPM installation
+:URLInstallationGuide: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/rpm_installation
 :LinkInstallationGuide: {URLInstallationGuide}[{TitleInstallationGuide}]
 //
 // titles/aap-planning-guide
