--- a/downstream/assemblies/devtools/assembly-writing-running-playbook.adoc
+++ b/downstream/assemblies/devtools/assembly-writing-running-playbook.adoc
@@ -1,11 +1,12 @@
-ifdef::context[:parent-context: {context}]
-[id="writing-running-playbook"]
+ifdef::context[:parent-context_of_writing-running-playbook: {context}]
+[id="writing-running-playbook_{context}"]
 
 = Writing and running a playbook with {ToolsName}
 
 :context: writing-running-playbook
 [role="_abstract"]
 
+include::devtools/proc-devtools-set-up-ansible-config.adoc[leveloffset=+1]
 include::devtools/proc-devtools-writing-first-playbook.adoc[leveloffset=+1]
 include::devtools/proc-devtools-inspect-playbook.adoc[leveloffset=+1]
 include::devtools/proc-devtools-run-playbook-extension.adoc[leveloffset=+1]
@@ -15,6 +16,6 @@ include::devtools/proc-devtools-working-with-ee.adoc[leveloffset=+2]
 include::devtools/proc-debugging-playbook.adoc[leveloffset=+1]
 include::devtools/proc-devtools-testing-playbook.adoc[leveloffset=+1]
 
-ifdef::parent-context[:context: {parent-context}]
-ifndef::parent-context[:!context:]
+ifdef::parent-context_of_writing-running-playbook[:context: {parent-context_of_writing-running-playbook}]
+ifndef::parent-context_of_writing-running-playbook[:!context:]
 
