AAP-30414 Devtools instructions for Windows installation

--- a/downstream/modules/devtools/con-devtools-requirements.adoc
+++ b/downstream/modules/devtools/con-devtools-requirements.adoc
@@ -2,11 +2,22 @@
 
 = Requirements
 
-// [role="_abstract"]
+[role="_abstract"]
+To install and use {ToolsName}, you must meet the following requirements.
+Extra requirements for Windows installations and containerized installations are indicated in the procedures.
 
-* {ToolsName} require Python 3.10 or later.
-* {ToolsName} require {VSCode} (Visual Studio Code) with the Ansible extension added. See xref:devtools-install-vsc_installing-devtools[Installing {VScode}].
-* You have installed a containerization platform, for example Podman, Podman Desktop, Docker, or Docker Desktop.
+* Python 3.10 or later.
+* {VSCode} (Visual Studio Code) with the Ansible extension added. See
+xref:devtools-install-vsc_installing-devtools[Installing {VScode}].
+* For containerized installations, the Micorsoft Dev Containers {VSCode} extension. See
+xref:devtools-ms-dev-containers-ext_installing-devtools[Installing and configuring the Dev Containers extension].
+* A containerization platform, for example Podman, Podman Desktop, Docker, or Docker Desktop.
++
+[NOTE]
+====
+The installation procedure for {ToolsName} on Windows covers the use of Podman Desktop only.
+See xref:devtools-install-podman-desktop-wsl_installing-devtools#installing_podman_desktop_on_a_windows_machine[Installing Podman Desktop on a Windows machine].
+====
 * You have a Red Hat account and you can log in to the Red Hat container registry at `registry.redhat.io`.
 For information about logging in to `registry.redhat.io`, see
 xref:devtools-setup-registry-redhat-io_installing-devtools[Authenticating with the Red Hat container registry].
