--- a/downstream/modules/devtools/proc-devtools-install-container.adoc
+++ b/downstream/modules/devtools/proc-devtools-install-container.adoc
@@ -2,18 +2,21 @@
 
 = Installing {ToolsName} on a container inside {VSCode}
 
-The Dev Containers {VSCode} extension requires a config file to store settings for your dev containers. 
-After you have created a config file for your dev container, reopen your directory in a container in {VSCode}.
+The Dev Containers {VSCode} extension requires a `.devcontainer` file to store settings for your dev containers. 
+You must create a config file for your dev container and reopen your directory in a container in {VSCode}.
 
 .Prerequisites
 
-. You have installed a containerization platform, for example Podman, Podman Desktop, Docker, or Docker Desktop.
-. You have a Red Hat login and you have logged in to the Red Hat registry at `registry.redhat.io`.
+* You have installed a containerization platform, for example Podman, Podman Desktop, Docker, or Docker Desktop.
+* You have a Red Hat login and you have logged in to the Red Hat registry at `registry.redhat.io`.
 For information about logging in to `registry.redhat.io`, see
 xref:devtools-setup-registry-redhat-io_installing-devtools[Authenticating with the Red Hat container registry].
-. You have installed {VSCode}.
-. You have installed the Ansible extension in {VSCode}.
-. You have installed the link:https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-containers[Microsoft Dev Containers] extension in {VSCode}.
+* You have installed {VSCode}.
+* You have installed the Ansible extension in {VSCode}.
+* You have installed the link:https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-containers[Microsoft Dev Containers] extension in {VSCode}.
+* If you are installing {ToolsName} on Windows, launch {VSCode} and connect to the WSL machine:
+.. Click the `Remote` (image:vscode-remote-icon.png[Remote,15,15]) icon.
+.. In the dropdown menu that appears, select the option to connect to the WSL machine.
 
 .Procedure
 
@@ -25,60 +28,10 @@ You must use different settings depending on whether you are using Podman or Doc
 
 ** If you are using Podman or Podman desktop, add the following text to `devcontainer.json`:
 +
-----
-{
-  "name": "ansible-dev-container-podman",
-  "image": "registry.redhat.io/ansible-automation-platform-25/ansible-dev-tools-rhel8:latest",
-  "containerUser": "root",
-  "runArgs": [
-    "--cap-add=CAP_MKNOD",
-    "--cap-add=NET_ADMIN",
-    "--cap-add=SYS_ADMIN",
-    "--cap-add=SYS_RESOURCE",
-    "--device",
-    "/dev/fuse",
-    "--security-opt",
-    "seccomp=unconfined",
-    "--security-opt",
-    "label=disable",
-    "--security-opt",
-    "apparmor=unconfined",
-    "--security-opt",
-    "unmask=/sys/fs/cgroup",
-    "--userns=host",
-    "--hostname=ansible-dev-container"
-  ],
-  "customizations": {
-    "vscode": {
-      "extensions": ["redhat.ansible"]
-    }
-  }
-}
-----
+include::snippets/podman-devcontainer.json[]
 ** If you are using Docker or Docker desktop, add the following text to `devcontainer.json`:
 +
-----
-{
-  "name": "ansible-dev-container-docker",
-  "image": "registry.redhat.io/ansible-automation-platform-25/ansible-dev-tools-rhel8:latest",
-  "containerUser": "root",
-  "runArgs": [
-    "--privileged",
-    "--device",
-    "/dev/fuse",
-    "--hostname=ansible-dev-container"
-  ],
-  "updateRemoteUserUID": true,
-  "customizations": {
-    "vscode": {
-      "extensions": ["redhat.ansible"]
-    }
-  }
-}
-----
-. In the Dev Containers extension settings, configure the `Dev > Containers:Docker path`.
-** If you are using Podman or Podman desktop, set `Dev > Containers:Docker path` to `podman`. 
-** If you are using Docker or Docker desktop, set `Dev > Containers:Docker path` to `docker`. 
+include::snippets/docker-devcontainer.json[]
 . Reopen the directory in a container.
 ** If {VSCode} detects that your directory contains the `devcontainer.json` file, the following notification appears:
 +
