--- a/downstream/modules/devtools/proc-devtools-install-rpm.adoc
+++ b/downstream/modules/devtools/proc-devtools-install-rpm.adoc
@@ -11,6 +11,7 @@ Refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/h
 
 * You have installed RHEL.
 * You have registered your system with Red Hat Subscription Manager.
+* You have installed a containerization platform, for example Podman or Docker.
 
 .Procedure
 
