--- a/downstream/modules/devtools/proc-devtools-setup-registry-redhat-io.adoc
+++ b/downstream/modules/devtools/proc-devtools-setup-registry-redhat-io.adoc
@@ -13,7 +13,8 @@ This is the same account that you use to log in to the Red Hat Customer Portal (
 [NOTE]
 ====
 If you are planning to install the {ToolsName} on a container inside {VSCode},
-you must log in to `registry.redhat.io` before launching {VSCode} so vscode can pull the `devtools` container from `registry.redhat.io`.
+you must log in to `registry.redhat.io` before launching {VSCode} so that {VSCode} can pull the
+`devtools` container from `registry.redhat.io`.
 
 If you are running {ToolsName} on a container inside {VSCode} and you want to pull execution environments
 or the `devcontainer` to use as an execution environment,
@@ -37,7 +38,6 @@ Username: my__redhat_username
 Password: ***********
 ----
 
-
 For more information about Red Hat container registry authentication, see
 link:https://access.redhat.com/RegistryAuthentication[Red Hat Container Registry Authentication]
 on the Red Hat customer portal.
@@ -45,6 +45,5 @@ on the Red Hat customer portal.
 // * If you are an organization administrator, you can create profiles for users in your organization and configure Red Hat customer portal access permissions for them.
 // Refer to link:https://access.redhat.com/start/learn:get-set-red-hat/resource/resources:create-and-manage-other-users[Create and manage other users] on the Red Hat customer portal for information.
 // * If you are a member of an organization, ask your administrator to create a Red Hat customer portal account for you.
-
 //Troubleshooting link:https://access.redhat.com/articles/3560571[Troubleshooting Authentication Issues with `registry.redhat.io`]
 
