AAP-25510-0922 Corrected minor nits found duing peer review of backports

--- a/downstream/modules/platform/proc-add-eda-safe-plugin-var.adoc
+++ b/downstream/modules/platform/proc-add-eda-safe-plugin-var.adoc
@@ -3,7 +3,7 @@
 
 = Adding a safe plugin variable to {EDAcontroller}
 
-When using redhat.insights_eda or similar plug-ins to run rulebook activations in {EDAcontroller}, you must add a safe plugin variable to a directory in {PlatformNameShort}. This would ensure connecton between {EDAcontroller} and the source plugin, and display port mappings correctly. 
+When using redhat.insights_eda or similar plug-ins to run rulebook activations in {EDAcontroller}, you must add a safe plugin variable to a directory in {PlatformNameShort}. This ensures connecton between {EDAcontroller} and the source plugin, and displays port mappings correctly. 
 
 .Procedure
 
@@ -20,6 +20,6 @@ automationedacontroller_additional_settings:
 +
 [NOTE]
 ====
-You can also extend the `automationedacontroller_additional_settings` variable beyond SAFE_PLUGINS in the django configuration file, /etc/ansible-automation-platform/eda/settings.yaml 
+You can also extend the `automationedacontroller_additional_settings` variable beyond SAFE_PLUGINS in the Django configuration file, /etc/ansible-automation-platform/eda/settings.yaml 
 ====
 
