--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -1,5 +1,7 @@
 // Templates for release notes are contained in the ..downstream/snippets folder.
 // For each release, make a copy of assembly-rn-template.adoc, rename and save as instructed in the template and add an include statement to this file.
+//If there are any technology previews, add the <.
+
 include::attributes/attributes.adoc[]
 
 = Release notes
@@ -9,17 +11,19 @@ include::{Boilerplate}[]
 
 include::topics/platform-intro.adoc[leveloffset=+1]
 
-include::topics/aap-24.adoc[leveloffset=+1]
+include::topics/aap-25.adoc[leveloffset=+1]
 
-include::topics/controller-440.adoc[leveloffset=+1]
+include::topics/aap-25-deprecated-features.adoc[leveloffset=+1]
 
-include::topics/eda-24.adoc[leveloffset=+1]
+include::topics/aap-25-removed-features.adoc[leveloffset=+1]
 
-include::topics/hub-464.adoc[leveloffset=+1]
+include::topics/aap-25-changed-features.adoc[leveloffset=+1]
 
-include::topics/operator-240.adoc[leveloffset=+1]
+include::topics/aap-25-known-issues.adoc[leveloffset=+1]
 
-include::topics/docs-24.adoc[leveloffset=+1]
+include::topics/aap-25-fixed-issues.adoc[leveloffset=+1]
+
+include::topics/docs-25.adoc[leveloffset+1]
 
 // Asynchronous release notes - commented out until 2.5 has asynchronous release note updates
 // include::async/async-updates.adoc[leveloffset=+1]
