--- a/downstream/modules/topologies/ref-ocp-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-b-env-a.adoc
@@ -5,7 +5,10 @@ The enterprise topology is intended for organizations that require {PlatformName
 
 == Infrastructure topology
 
-// The following diagram outlines the infrastructure topology that Red Hat has tested with the respective deployment model that customers may use when self-managing Ansible Automation Platform:
+The following diagram outlines the infrastructure topology that Red Hat has tested with the respective deployment model that customers may use when self-managing Ansible Automation Platform:
+
+.Infrastructure topology diagram
+image::ocp-b-env-a.png[Operator enterprise topology diagram]
 
 The following infrastructure topology describes an OpenShift Cluster with 3 master nodes and 2 worker nodes.
 
